[package]
name = "conex"
version = "0.1.0"
edition = "2021"

[dependencies]
async-ringbuf = { version = "0.1.3", features = ["impl-tokio"] }
bollard = "0.14.0"
clap = { version = "*", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["stream", "gzip"] }
ring = { version = "0.16.20", features = ["std"] }
tar = "0.4.38"
tokio = { version = "1.33.0", features = ["full"] }
zstd = "0.12.3"
indicatif = "0.17.3"
data-encoding = "2.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-util = { version = "0.7.9", features = ["full"] }
bytes = "1.5.0"
futures-core = "0.3.28"
itertools = "0.11.0"
oci-spec = "0.6.3"
serde = "1.0.189"
serde_json = "1.0.107"
num_cpus = "1.16.0"
hex = "0.4.3"
