[package]
name = "conex"
version = "0.1.0"
edition = "2021"

[dependencies]
async-ringbuf = { version = "0.1.3", features = ["impl-tokio"] }
bollard = "0.14.0"
bytes = "1.5.0"
clap = { version = "*", features = ["derive"] }
data-encoding = "2.4.0"
futures-core = "0.3.28"
home = "0.5.5"
http = "0.2.9"
indicatif = "0.17.3"
itertools = "0.11.0"
num_cpus = "1.16.0"
oci-spec = "0.6.3"
regex = "1.10.2"
reqwest = { version = "0.11.16", features = ["stream", "gzip", "json"] }
ring = { version = "0.16.20", features = ["std"] }
serde = "1.0.189"
serde_json = "1.0.107"
tar = "0.4.38"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.4.1"
zstd = "0.12.3"
